--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "swiper": "^5.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
