--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-id-swiper": "^3.0.0",
+    "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
