--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "axios": "^0.19.2",
     "qs": "^6.9.3",
     "react": "^16.13.1",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-id-swiper": "^3.0.0",
     "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -20,8 +18,7 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.0",
-    "swiper": "^5.3.8"
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
