소개 페이지 보완 및 React Helmet 적용

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "qs": "^6.9.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
     "react-player": "^2.0.1",
     "react-redux": "^7.2.0",
